--- a/src/styles.css
+++ b/src/styles.css
@@ -3,20 +3,17 @@ html, body {
 
 body {
 	font-size: 10px;
-	background-color: whitesmoke;
+	background-color: #404040;
 }
 
 table {
 	width: 100%;
 	height: 100%;
 	margin: auto;
+	background-color: #505050;
 	border-collapse: collapse;
-	border: 1px solid lightgray;
+	border: 1px solid black;
 	table-layout: auto;
-}
-
-th, td {
-    border-bottom: 1px solid #ddd;
 }
 
 th {
@@ -24,10 +21,38 @@ th {
 }
 
 tr:hover {
-	background-color: #f5f5f5;
+	background-color: #606060;
 }
 
 tr:nth-child(even)
 {
-	background-color: #f2f2f2;
+	background-color: #404040;
+}
+
+.godlike {
+	color: #aa43dd;
+}
+
+.legendary {
+	color: #ff66cc;
+}
+
+.world_class {
+	color: #ff9c00;
+}
+
+.professional {
+	color: #fff200;
+}
+
+.good {
+	color: #00ff00;
+}
+
+.ok {
+	color: #0090ff;
+}
+
+.beginner {
+	color: #f3f5ca;
 }
