--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 html, body {
+	color: #b8b8b8;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
