--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,9 @@
 html, body {
-	color: #b8b8b8;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-body {
-	font-size: 12px;
+	font-size: 11px;
 	background-color: #404040;
 }
+/*
 
 table {
 	width: 100%;
@@ -24,35 +21,33 @@ table {
 	table-layout: auto;
 	border-collapse: separate;
 }
+*/
+.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
+	padding: 0px;
+}
 
-#p_tt {
+.table {
+	color: #b8b8b8;
+}
+
+.table tr{
+	padding: 0%;
+	margin: 0%;
+}
+
+.diff {
+	color: #b8b8b8;
+	align-content: right;
+}
+
+
+#tt_table tr {
 	text-align: center;
-}
-
-#t_tt {
-	text-align: center;
-}
-
-#diff {
-	text-align: center;
-}
-
-th {
-	text-align: left;
-}
-
-tr:hover {
-	background-color: #606060;
 }
 
 tr:nth-child(even)
 {
 	background-color: #404040;
-}
-
-tr:hover
-{
-	background-color: #606060;
 }
 
 .wr {
