--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,17 @@
-html, body {
+html,
+body {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 11px;
 	color: #b8b8b8;
 	background-color: #404040;
 }
 
-.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
+.table-condensed>thead>tr>th,
+.table-condensed>tbody>tr>th,
+.table-condensed>tfoot>tr>th,
+.table-condensed>thead>tr>td,
+.table-condensed>tbody>tr>td,
+.table-condensed>tfoot>tr>td {
 	padding: 0px;
 }
 
@@ -21,7 +27,7 @@ html, body {
 	color: #b8b8b8;
 }
 
-.table tr{
+.table tr {
 	padding: 0%;
 	margin: 0%;
 }
@@ -39,8 +45,7 @@ tr button {
 	text-align: center;
 }
 
-tr:nth-child(even)
-{
+tr:nth-child(even) {
 	background-color: #404040;
 }
 
@@ -74,4 +79,36 @@ tr:nth-child(even)
 
 .beginner {
 	color: #f3f5ca;
+}
+
+.wr>line {
+	stroke: #ff0000;
+}
+
+.godlike>line {
+	stroke: #aa43dd;
+}
+
+.legendary>line {
+	stroke: #ff66cc;
+}
+
+.world_class>line {
+	stroke: #ff9c00;
+}
+
+.professional>line {
+	stroke: #fff200;
+}
+
+.good>line {
+	stroke: #00ff00;
+}
+
+.ok>line {
+	stroke: #0090ff;
+}
+
+.beginner>line {
+	stroke: #f3f5ca;
 }
